--- a/src/components/contactus/Contact_us.css
+++ b/src/components/contactus/Contact_us.css
@@ -1,83 +1,205 @@
-.contact_heading{
+.contact_heading {
+  margin-top: 10rem;
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  padding-bottom: 1rem;
+}
+.connect_uss {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  padding-bottom: 1rem;
+}
+.top_connect {
+  display: flex;
+  justify-content: space-between;
+}
+.connect_form {
+  margin: 3rem 20rem;
+  gap: 2rem;
+  flex-direction: column;
+  .left,
+  .right {
+    width: 40%;
+  }
+
+  .left,
+  .right,
+  .bottom {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: -2%;
+
+    label {
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+
+      input {
+        font-size: 14px;
+        font-weight: 400;
+        outline: none;
+
+        border: none;
+        border-bottom: 1px solid rgba(179, 179, 179, 0.5);
+      }
+    }
+  }
+}
+.bottom {
+  padding-top: 1rem;
+}
+.connect_submit {
+  margin-top: 1rem;
+}
+.error {
+  font-size: 12px;
+  color: red;
+}
+.connect_submit {
+  height: 48px;
+  width: 160px;
+  border: none;
+  border-radius: 8px;
+  background-color: rgba(8, 45, 74, 1);
+  color: white;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+
+  :hover {
+    cursor: pointer;
+  }
+}
+
+@media (min-width:1600px) and (max-width: 2000px) {
+    .connect_form {
+      margin: 3rem 8rem;
+    }
+    .connect_form {
+      & .left,
+      & .right,
+      & .bottom {
+        font-size: 28px;
+      }
+    }
+    .community_paragraph{
+      font-size: 18px;
+    }
+    .customer_says {
+      font-size: 48px;
+      font-weight: 600;
+    }
+  
+    .connect_submit {
+      height: 60px;
+      width: 204px;
+      font-size: 18px;
+    }
+    .contact_heading {
+      margin-top: 2rem;
+      display: flex;
+      justify-content: center;
+      font-size: 22px;
+      padding-bottom: 1rem;
+    }
+    .connect_form {
+      & .left,
+      & .right,
+      & .bottom {
+        & label {
+          & input {
+            font-size: 18px;
+          }
+        }
+      }
+    }
+  }
+  
+
+@media (min-width:1400px) and (max-width: 1600px) {
+  .connect_form {
+    margin: 3rem 4rem;
+  }
+  .connect_form {
+    & .left,
+    & .right,
+    & .bottom {
+      font-size: 28px;
+    }
+  }
+  .community_paragraph{
+    font-size: 18px;
+  }
+  .customer_says {
+    font-size: 48px;
+    font-weight: 600;
+  }
+
+  .connect_submit {
+    height: 60px;
+    width: 204px;
+    font-size: 18px;
+  }
+  .contact_heading {
     margin-top: 10rem;
     display: flex;
     justify-content: center;
-    font-size: 14px;
+    font-size: 22px;
     padding-bottom: 1rem;
-}
-.connect_uss{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
-    padding-bottom: 1rem;
-}
-.top_connect{
-    display: flex;
-    justify-content: space-between;
-}
-.connect_form{
-    margin: 3rem 20rem;
-    gap: 2rem;
-    flex-direction: column;
-    .left,.right{
-        width: 40%;
-    }
-    
-    .left,.right,.bottom{
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        font-size: 20px;
-        font-weight: 500;
-        letter-spacing: -2%;
-        
-        label{
-            display: flex;
-            flex-direction: column;
-            gap: 40px;
-            
-            input{
-                font-size: 14px;
-                font-weight: 400;
-                outline: none;
-               
-                border: none;
-                border-bottom: 1px solid rgba(179, 179, 179, 0.5);
-            }
+  }
+  .connect_form {
+    & .left,
+    & .right,
+    & .bottom {
+      & label {
+        & input {
+          font-size: 18px;
         }
+      }
     }
+  }
+}
 
+@media screen and (max-width: 1400px) {
+  .connect_form {
+    margin: 3rem 3rem;
+  }
+  .contact_heading {
+    margin-top: 7.5rem;}
 }
-.bottom{
-    padding-top: 1rem;
+@media screen and (max-width: 1300px) {
+  .contact_heading {
+    margin-top: 6rem;}
 }
-.connect_submit{
-    margin-top: 1rem;
+@media screen and (max-width: 1200px) {
+  .contact_heading {
+    margin-top: 7rem;}
 }
-.error{
-    font-size: 12px;
-    color: red;
 
-}
-.connect_submit{
-    height: 48px;
-    width: 160px;
-    border: none;
-    border-radius: 8px;
-    background-color: rgba(8, 45, 74, 1);
-    color: white;
-    display: flex;
-   gap: 0.5rem;
-   align-items: center;
-    justify-content: center;
 
-    :hover{
-        cursor: pointer;
-    }
+@media screen and (max-width: 1100px) {
+  .connect_form {
+    margin: 3rem 2rem;
+  }
+  .contact_heading {
+    margin-top: 4rem;}
+}
+
+@media screen and (max-width: 768px) {
+  .contact_us {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 451px) {
-    .contact_us {
-      display: none;}
+  .contact_us {
+    display: none;
   }
+}
