faq grid complete

--- a/src/components/aboutus/About_us.css
+++ b/src/components/aboutus/About_us.css
@@ -222,6 +222,118 @@ hr {
   padding-bottom: 2rem;
 }
 
+@media screen and (max-width: 2000px) {
+ 
+
+  .heading {
+    margin-top: 3rem;
+  }
+  .about_us {
+    padding-bottom: 1rem;
+    font-weight: 600;
+  }
+
+  .female {
+    font-size: 26px;
+    font-weight: 600;
+    padding: 0 2rem;
+    line-height: 24px;
+    padding-bottom: 1rem;
+  }
+  .paragraph {
+    padding-left: 0;
+    width: 91vw;
+
+    p {
+      font-weight: 550;
+      font-size: 20px;
+      color: rgba(27, 27, 28, 1);
+      font-family: Vietnam Pro;
+    }
+  }
+
+  .why_cnex {
+    margin-left: 0rem;
+  }
+  .why_cnex_grid_container {
+    margin: 3rem 7rem;
+    padding: 0rem 15rem;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  }
+  .features {
+    margin-left: 0rem;
+  }
+  .headingS {
+    padding: 1rem 0rem;
+  }
+  .whycnex {
+    padding-top: 3rem;
+    font-size: 32px;
+  }
+  .feature_experience {
+    display: block;
+    text-align: center;
+    font-size: 32px;
+  }
+  .discover {
+    font-size: 18px;
+    padding: 0rem 1rem;
+    text-align: center;
+  }
+  .grid_container_feature {
+    margin: 3rem 7rem;
+    padding: 0rem 15rem;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    
+  }
+
+  .about_us {
+    padding-bottom: 0rem;
+  }
+  .getintouch {
+    margin-top: 0rem;
+  }
+
+
+}
+
+@media screen and (max-width: 1800px){
+  .why_cnex_grid_container,.grid_container_feature {
+    margin: 3rem 4rem;
+    padding: 0rem 15rem;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  }
+
+
+}
+
+@media screen and (max-width: 1600px){
+  .why_cnex_grid_container,.grid_container_feature {
+    margin: 3rem 4rem;
+    padding: 0rem 12rem;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  }
+
+}
+
+@media screen and (max-width: 1400px){
+  .why_cnex_grid_container,.grid_container_feature {
+    margin: 3rem 4rem;
+    padding: 0rem 7rem;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  }
+
+}
+
+@media screen and (max-width: 1200px){
+  .why_cnex_grid_container,.grid_container_feature {
+    margin: 3rem 3.6rem;
+    padding: 0rem 4rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+
+}
+
 @media screen and (max-width: 1080px) {
   .grid_container {
     display: none;
@@ -237,6 +349,96 @@ hr {
       min-width: 400px;
       object-fit: cover;
     }
+  }
+
+  .heading {
+    margin-top: 3rem;
+  }
+  .about_us {
+    padding-bottom: 1rem;
+    font-weight: 600;
+  }
+
+  .female {
+    font-size: 26px;
+    font-weight: 600;
+    padding: 0 2rem;
+    line-height: 24px;
+    padding-bottom: 1rem;
+  }
+  .paragraph {
+    padding-left: 0;
+    width: 91vw;
+
+    p {
+      font-weight: 550;
+      font-size: 20px;
+      color: rgba(27, 27, 28, 1);
+      font-family: Vietnam Pro;
+    }
+  }
+
+  .why_cnex {
+    margin-left: 0rem;
+  }
+  .why_cnex_grid_container,.grid_container_feature {
+    margin: 3rem 3.4rem;
+    padding: 0rem 3rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+  .features {
+    margin-left: 0rem;
+  }
+  .headingS {
+    padding: 1rem 0rem;
+  }
+  .whycnex {
+    padding-top: 3rem;
+    font-size: 32px;
+  }
+  .feature_experience {
+    display: block;
+    text-align: center;
+    font-size: 32px;
+  }
+  .discover {
+    font-size: 18px;
+    padding: 0rem 1rem;
+    text-align: center;
+  }
+  .grid_container_feature {
+    margin: 0rem 1.5rem;
+    
+  }
+  .why_background {
+    padding-bottom: 3rem;
+  }
+  .about_us {
+    padding-bottom: 0rem;
+  }
+  .getintouch {
+    margin-top: 0rem;
+  }
+  .do_not_show {
+    display: none;
+  }
+  .ourstory {
+    margin: 0rem 1rem;
+    .our_story {
+      display: none;
+    }
+  }
+  .storydiscription {
+    img {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 1000px){
+  .why_cnex_grid_container,.grid_container_feature {
+    margin: 3rem 2.9rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
 }
 
@@ -267,14 +469,14 @@ hr {
       font-family: Vietnam Pro;
     }
   }
-  .why_background {
-    margin: 3rem 1rem;
-  }
+ 
   .why_cnex {
     margin-left: 0rem;
   }
   .why_cnex_grid_container {
-    margin: 3rem 1.5rem;
+    margin: 3rem 2.8rem;
+    padding: 0;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
   .features {
     margin-left: 0rem;
@@ -292,12 +494,13 @@ hr {
     font-size: 32px;
   }
   .discover {
-    font-size: 18px;
+    font-size: 16px;
     padding: 0rem 1rem;
     text-align: center;
   }
   .grid_container_feature {
-    margin: 0rem 1.5rem;
+    margin: 3rem 2.8rem;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
   .why_background {
     padding-bottom: 3rem;
@@ -329,6 +532,9 @@ hr {
     font-size: 22px;
   }
 
+  .why_cnex_grid_container {
+    margin: 3rem 2rem;}
+
   .whycnex {
     font-size: 30px;
   }
@@ -338,6 +544,8 @@ hr {
   .female {
     font-size: 20px;
   }
+  .why_cnex_grid_container {
+    margin: 3rem 1.8rem;}
 
   .whycnex {
     font-size: 28px;
@@ -371,9 +579,7 @@ hr {
       font-family: Vietnam Pro;
     }
   }
-  .why_background {
-    margin: 3rem 1rem;
-  }
+
   .why_cnex {
     margin-left: 0rem;
   }
